# StralGOL

./: CMakeLists.txt  README.md  entry.cpp  game.cpp
include/: common.h  game.h  stralGOL.h  stralGOL.h.in
